--- a/styles/index1.css
+++ b/styles/index1.css
@@ -14,35 +14,23 @@ body{
 .header h1{
     color: #EEE2DE;
     text-align: center;
+    padding-bottom: 0px;
+    margin: 12px;
 }
-.cissus a, .hisinz a, .hoax a, .inz a, .jedninf a{
+.main a {
     text-decoration: none;
     color: #EAB2A0;
 }
-.cissus a:hover, .hisinz a:hover, .hoax a:hover, .inz a:hover, .jedninf a:hover{
+.main a:hover {
     text-decoration: underline;
     font-size: large;
 }
-.cissus{
+.main{
     margin: 0px;
     padding: 1px;
     background-color: #750E21;
-}
-.cissus li{
     color:#EEE2DE;
-}
-.hisinz{
-    margin: 0;
-    padding: 1px;
-    background-color: #E3651D;
-}
-.hoax{
-    background-color: #BED754;
-    padding: 1px;
-}
-.inz{
-    background-color: #E3651D;
-}
-.jedninf{
-    background-color: #750E21;
+
+    padding: 11px;
+    margin: 0px;
 }
